--- a/docker-nuxt/Dockerfile
+++ b/docker-nuxt/Dockerfile
@@ -2,7 +2,10 @@ FROM node:12
 
 ENV NUXT_HOST=0.0.0.0
 WORKDIR /app
-COPY ./app .
+COPY ./app/package.json ./app/yarn.lock ./
+
 RUN yarn install
+
+COPY ./app .
 
 CMD ["yarn","run", "dev"]
